--- a/www.nass.gov.ng/a0cef5df2c6ec661f024e5433691100eef04c968.yml
+++ b/www.nass.gov.ng/a0cef5df2c6ec661f024e5433691100eef04c968.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 17:00:47 GMT
+    - Sat, 18 Aug 2018 02:55:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6xF9lnerxDtGeD3y2AZ071; path=/
+    - PHPSESSID=6DscrcDmAY6XHvB%2CQ-63T3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 17:00:47 GMT
+recorded_at: Sat, 18 Aug 2018 02:55:56 GMT
