--- a/www.nass.gov.ng/619ea08077f40cf9bfb76066062eb294dd3a98b8.yml
+++ b/www.nass.gov.ng/619ea08077f40cf9bfb76066062eb294dd3a98b8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 17:01:42 GMT
+    - Sat, 18 Aug 2018 02:56:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EUWIzyV66n9orzkL1YVX%2C1; path=/
+    - PHPSESSID=2BDbF16Pxu9kSBh3Xy39n2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 17:01:42 GMT
+recorded_at: Sat, 18 Aug 2018 02:56:43 GMT
