--- a/www.nass.gov.ng/b4447ab8249eac06b20da78d929fc2b6c3e3c996.yml
+++ b/www.nass.gov.ng/b4447ab8249eac06b20da78d929fc2b6c3e3c996.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 17:08:05 GMT
+    - Sat, 18 Aug 2018 03:02:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wTBDXAhldT%2C6sj1FBM32T2; path=/
+    - PHPSESSID=D9VdNHcwqvYUUgRSlNPAU1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 17:08:06 GMT
+recorded_at: Sat, 18 Aug 2018 03:02:45 GMT
