--- a/www.nass.gov.ng/f3fccfd7b16a0b15ea5c6a69e899ff832ce5e903.yml
+++ b/www.nass.gov.ng/f3fccfd7b16a0b15ea5c6a69e899ff832ce5e903.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 17:08:59 GMT
+    - Sat, 18 Aug 2018 03:03:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mpfiokxQ%2ChXx2kL%2C75P9E2; path=/
+    - PHPSESSID=3WA0dI2ur2KtV0X7jOEGb1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 17:08:59 GMT
+recorded_at: Sat, 18 Aug 2018 03:03:39 GMT
