--- a/www.nass.gov.ng/eaa5fc33240c52f36b9a30a32c89256a177516b4.yml
+++ b/www.nass.gov.ng/eaa5fc33240c52f36b9a30a32c89256a177516b4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 17:12:23 GMT
+    - Sat, 18 Aug 2018 03:07:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2Il1kLrDPB58xwkREkyMP3; path=/
+    - PHPSESSID=-jT6GJGlmbAS63ohykK%2CD1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 17:12:23 GMT
+recorded_at: Sat, 18 Aug 2018 03:07:35 GMT
