--- a/www.nass.gov.ng/54290f62ca372d07a87ed2ea40785c0da0045cb6.yml
+++ b/www.nass.gov.ng/54290f62ca372d07a87ed2ea40785c0da0045cb6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 17:30:42 GMT
+    - Sat, 18 Aug 2018 03:29:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vhd7WYEm9tDrEU-HEg%2CRP0; path=/
+    - PHPSESSID=lR3vcIn4lbVWM5LpkldJe3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 17:30:43 GMT
+recorded_at: Sat, 18 Aug 2018 03:29:58 GMT
