--- a/www.nass.gov.ng/69804a65166f3f9c6ab5d2d1bf6afe12db1397a8.yml
+++ b/www.nass.gov.ng/69804a65166f3f9c6ab5d2d1bf6afe12db1397a8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 17:52:56 GMT
+    - Sat, 18 Aug 2018 03:50:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tET9IfJ%2CmhCQg1CTuabCr1; path=/
+    - PHPSESSID=PADMa%2Cb7dr-2bPxTlh4cL1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 17:52:56 GMT
+recorded_at: Sat, 18 Aug 2018 03:50:44 GMT
