--- a/www.nass.gov.ng/9efd94bd1785816f79f2dba3b7263839c126a6b4.yml
+++ b/www.nass.gov.ng/9efd94bd1785816f79f2dba3b7263839c126a6b4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 18:16:09 GMT
+    - Sat, 18 Aug 2018 04:09:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=O996n2H-dZ8AgywYV%2CMwQ0; path=/
+    - PHPSESSID=aGVJYN87vvIETRoxqYOLc3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 18:16:09 GMT
+recorded_at: Sat, 18 Aug 2018 04:09:58 GMT
