--- a/www.nass.gov.ng/f9b74161cefbb16526b1ba09a715bf2792c977f1.yml
+++ b/www.nass.gov.ng/f9b74161cefbb16526b1ba09a715bf2792c977f1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 18:23:57 GMT
+    - Sat, 18 Aug 2018 04:16:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CyQ5HuM2Jlk5FNTaOF8xU3; path=/
+    - PHPSESSID=lRi%2CawRFUA2VERZ7Fv0362; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 18:23:57 GMT
+recorded_at: Sat, 18 Aug 2018 04:16:27 GMT
