--- a/www.nass.gov.ng/1e9092d3a99a8fba8f29d11cce7ad40677cc4466.yml
+++ b/www.nass.gov.ng/1e9092d3a99a8fba8f29d11cce7ad40677cc4466.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 18:28:14 GMT
+    - Sat, 18 Aug 2018 04:22:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=pe-DNW%2CrOCqz3VIChD7SU1; path=/
+    - PHPSESSID=3uU82iST%2Ct5gOyvoSt--Y2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 18:28:15 GMT
+recorded_at: Sat, 18 Aug 2018 04:22:25 GMT
