--- a/www.nass.gov.ng/67e0ae8f7fdb624d64489322057aef9166690f5d.yml
+++ b/www.nass.gov.ng/67e0ae8f7fdb624d64489322057aef9166690f5d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 18:51:43 GMT
+    - Sat, 18 Aug 2018 04:46:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LxNbLRS1V1Rj2%2CSh1vN4D0; path=/
+    - PHPSESSID=x2cSQBls8x5hk8b%2C530Lf3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 18:51:44 GMT
+recorded_at: Sat, 18 Aug 2018 04:46:47 GMT
