--- a/www.nass.gov.ng/16e8beaca1db4c47a7949042d14d3f85510750fa.yml
+++ b/www.nass.gov.ng/16e8beaca1db4c47a7949042d14d3f85510750fa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 18:53:30 GMT
+    - Sat, 18 Aug 2018 04:48:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=u3EEY3AWf-%2CE6p028W-CX0; path=/
+    - PHPSESSID=U-w1c-dsz7HKDduuzMW0F1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 18:53:30 GMT
+recorded_at: Sat, 18 Aug 2018 04:48:28 GMT
