--- a/www.nass.gov.ng/4e58130242d2473c9bddbcb4f01f6d6a6a49c0cf.yml
+++ b/www.nass.gov.ng/4e58130242d2473c9bddbcb4f01f6d6a6a49c0cf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 18:55:12 GMT
+    - Sat, 18 Aug 2018 04:50:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tKZXG1Ys1P8YsDwPTNPXj3; path=/
+    - PHPSESSID=JXcuK4pX9xkKytOn%2C1yhy3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 18:55:13 GMT
+recorded_at: Sat, 18 Aug 2018 04:50:24 GMT
