--- a/www.nass.gov.ng/0dc3fab010f01bda86e21cd2d25dcb2f5e1f9534.yml
+++ b/www.nass.gov.ng/0dc3fab010f01bda86e21cd2d25dcb2f5e1f9534.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 19:07:52 GMT
+    - Sat, 18 Aug 2018 05:02:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4iOlOr3OGRNy6fY%2CXwQUy0; path=/
+    - PHPSESSID=7%2ChPCvjUmhPp35i%2C6ck5O0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 19:07:53 GMT
+recorded_at: Sat, 18 Aug 2018 05:02:06 GMT
