--- a/www.nass.gov.ng/736caca91d0b784ae269922800e4c21d4aec596d.yml
+++ b/www.nass.gov.ng/736caca91d0b784ae269922800e4c21d4aec596d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 19:09:04 GMT
+    - Sat, 18 Aug 2018 05:03:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=azSkMxLdJK%2CENxBcwW-is3; path=/
+    - PHPSESSID=goobmOPFtCzu7GOTefOvl1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 19:09:04 GMT
+recorded_at: Sat, 18 Aug 2018 05:03:10 GMT
