--- a/www.nass.gov.ng/b710172416002a833fe14b217d8a02f83402c70b.yml
+++ b/www.nass.gov.ng/b710172416002a833fe14b217d8a02f83402c70b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 20:27:22 GMT
+    - Sun, 19 Aug 2018 07:04:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rSzwfSNc-rL3xYC5yRUck0; path=/
+    - PHPSESSID=vxz33fOzmmk-%2Cu0zbbQVO1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 17 Aug 2018 20:27:22 GMT
+recorded_at: Sun, 19 Aug 2018 07:04:46 GMT
