--- a/www.nass.gov.ng/6a468782aa6afb271767130966bd956cee44cc40.yml
+++ b/www.nass.gov.ng/6a468782aa6afb271767130966bd956cee44cc40.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 20:29:50 GMT
+    - Sun, 19 Aug 2018 07:07:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=r6k4jlRTms2dp%2CdrYntrl3; path=/
+    - PHPSESSID=f2x7EQ57yF18Ncdf2Sygw3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 17 Aug 2018 20:29:51 GMT
+recorded_at: Sun, 19 Aug 2018 07:07:40 GMT
