--- a/www.nass.gov.ng/62eddccdd8f33fe827d878d8ca4a1b94715c2799.yml
+++ b/www.nass.gov.ng/62eddccdd8f33fe827d878d8ca4a1b94715c2799.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 20:32:23 GMT
+    - Sun, 19 Aug 2018 07:11:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EWyhb%2C2RV5O3LFJy2kpOQ3; path=/
+    - PHPSESSID=f4HMgQN2SM0zYbWxe2Ujg0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 20:32:23 GMT
+recorded_at: Sun, 19 Aug 2018 07:11:28 GMT
