--- a/www.nass.gov.ng/7d408db573c69a4c0d061362a6925b676c42c68b.yml
+++ b/www.nass.gov.ng/7d408db573c69a4c0d061362a6925b676c42c68b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 20:42:03 GMT
+    - Sun, 19 Aug 2018 07:21:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YsRFtd8GrJTu5BDWi%2CtUI3; path=/
+    - PHPSESSID=dpvrDneDSiZKpKHfZVVwH3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 20:42:03 GMT
+recorded_at: Sun, 19 Aug 2018 07:21:53 GMT
