--- a/www.nass.gov.ng/dab307f70e75dd9e5e8c694ddf7528cdfafa9c76.yml
+++ b/www.nass.gov.ng/dab307f70e75dd9e5e8c694ddf7528cdfafa9c76.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 20:49:13 GMT
+    - Sun, 19 Aug 2018 07:29:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fbfYUyrQTwDdybzleHXVp1; path=/
+    - PHPSESSID=Md7WqvBe1ZUh4qxHfbU%2C00; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 20:49:13 GMT
+recorded_at: Sun, 19 Aug 2018 07:29:51 GMT
