--- a/www.nass.gov.ng/31b21418f37b11687cb538c410ae9369249d9bef.yml
+++ b/www.nass.gov.ng/31b21418f37b11687cb538c410ae9369249d9bef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 20:57:53 GMT
+    - Sun, 19 Aug 2018 07:39:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3r62hp38fD%2CBm-HcEqy7n2; path=/
+    - PHPSESSID=W%2Ct4t%2CganFhrnEIkXuUvv2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 20:57:54 GMT
+recorded_at: Sun, 19 Aug 2018 07:39:15 GMT
