--- a/www.nass.gov.ng/4abf0db34f01d189d9485427847c3a61fd5c21d1.yml
+++ b/www.nass.gov.ng/4abf0db34f01d189d9485427847c3a61fd5c21d1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 20:58:55 GMT
+    - Sun, 19 Aug 2018 07:40:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tDVA%2Cv88Y7P3QoWA7qsiF3; path=/
+    - PHPSESSID=5GGEdCuirEXsuFG2XITpP3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 20:58:55 GMT
+recorded_at: Sun, 19 Aug 2018 07:40:02 GMT
