--- a/www.nass.gov.ng/ce7600f42a1578a2480d588dd08ae66f6e3f41cb.yml
+++ b/www.nass.gov.ng/ce7600f42a1578a2480d588dd08ae66f6e3f41cb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 21:00:34 GMT
+    - Sun, 19 Aug 2018 07:41:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ATVUDxL%2Cj13WM9%2C68-5j92; path=/
+    - PHPSESSID=r-9pRF7IQ98HaMZH1dKoR1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 21:00:34 GMT
+recorded_at: Sun, 19 Aug 2018 07:41:41 GMT
