--- a/www.nass.gov.ng/4200be907746e6a419327a7311427ccaf99e7e02.yml
+++ b/www.nass.gov.ng/4200be907746e6a419327a7311427ccaf99e7e02.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 21:02:21 GMT
+    - Sun, 19 Aug 2018 07:43:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wSCcDiG%2CY5DKe4DPY2xKI0; path=/
+    - PHPSESSID=9qDKIVchsX6owHf6Lrne10; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 21:02:22 GMT
+recorded_at: Sun, 19 Aug 2018 07:43:27 GMT
