--- a/www.nass.gov.ng/e7f14e9f4ca2ee389874e42ec91ad8eea6378e5e.yml
+++ b/www.nass.gov.ng/e7f14e9f4ca2ee389874e42ec91ad8eea6378e5e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 21:18:01 GMT
+    - Sun, 19 Aug 2018 07:58:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9q9wQK6lCU%2Ca9ArFStNa61; path=/
+    - PHPSESSID=X5ZabQbeZ7y9WfKrKnciC2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 21:18:02 GMT
+recorded_at: Sun, 19 Aug 2018 07:58:09 GMT
