--- a/www.nass.gov.ng/d106538c570402d0a1a1f8ec9f991443901f061c.yml
+++ b/www.nass.gov.ng/d106538c570402d0a1a1f8ec9f991443901f061c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 21:24:30 GMT
+    - Sun, 19 Aug 2018 08:04:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fJOlCK4W%2Co2Ft7v4BkjT41; path=/
+    - PHPSESSID=TkY7hraREnJ0y561kMMtl3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 21:24:30 GMT
+recorded_at: Sun, 19 Aug 2018 08:04:22 GMT
