--- a/www.nass.gov.ng/47f96158788899dcd66d20562a2a71c35fdefc89.yml
+++ b/www.nass.gov.ng/47f96158788899dcd66d20562a2a71c35fdefc89.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 21:28:18 GMT
+    - Sun, 19 Aug 2018 08:09:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fXuu8pVv0NUVk%2CYD1fnox3; path=/
+    - PHPSESSID=ajsIpZETPONdl-e8XktjT0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 21:28:19 GMT
+recorded_at: Sun, 19 Aug 2018 08:09:18 GMT
