--- a/www.nass.gov.ng/63104e00748eb9727ef4d88413bcd86a720c42b0.yml
+++ b/www.nass.gov.ng/63104e00748eb9727ef4d88413bcd86a720c42b0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 21:29:23 GMT
+    - Sun, 19 Aug 2018 08:11:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CiTS3gTput9XdviNpcplE0; path=/
+    - PHPSESSID=N0e28%2C3bHgrSgYNxQOBzi0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 21:29:23 GMT
+recorded_at: Sun, 19 Aug 2018 08:11:19 GMT
